--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass": "^1.59.3",
     "sass-loader": "^10.4.1",
     "vue": "^3.2.13",
+    "vue-recyclerview": "^0.4.1",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.10"
   },
