--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "sass": "^1.59.3",
     "sass-loader": "^10.4.1",
     "vue": "^3.2.13",
-    "vue-recyclerview": "^0.4.1",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/font": "^7.2.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
