--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.33",
     "sass": "^1.59.3",
     "sass-loader": "^10.4.1",
     "vue": "^3.2.13",
