--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "package.json": "^2.0.1",
     "pinia": "^2.0.33",
     "sass": "^1.59.3",
     "sass-loader": "^10.4.1",
