--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@imengyu/vue3-context-menu": "^1.2.3",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "package.json": "^2.0.1",
