--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^10.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
+    "vue-select-3": "^1.0.1",
     "vuetify": "^3.1.10"
   },
   "devDependencies": {
