--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "pinia": "^2.0.33",
     "sass": "^1.59.3",
     "sass-loader": "^10.4.1",
+    "socket.io-client": "^4.6.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vue-sse": "^2.5.2",
-    "vuetify": "^3.1.16"
+    "vuetify": "^3.1.16",
+    "yjs": "^13.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
