--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@imengyu/vue3-context-menu": "^1.2.3",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "js-base64": "^3.7.5",
     "package.json": "^2.0.1",
     "pinia": "^2.0.33",
     "sass": "^1.59.3",
