--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.2.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
     "js-base64": "^3.7.5",
     "package.json": "^2.0.1",
